<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/all"
        android:title="@string/all" />
    <item
        android:id="@+id/assign_cd"
        android:title="@string/assign_cd" />
    <item
        android:id="@+id/accept_cd"
        android:title="@string/accept_cd" />
    <item
        android:id="@+id/reject_cd"
        android:title="@string/reject_cd" />

    <item
        android:id="@+id/assign_ft"
        android:title="@string/assign_ft" />
    <item
        android:id="@+id/accept_ft"
        android:title="@string/accept_ft" />
    <item
        android:id="@+id/reject_ft"
        android:title="@string/reject_ft" />

    <item
        android:id="@+id/processing"
        android:title="@string/processing" />

    <item
        android:id="@+id/ok"
        android:title="@string/ok" />

    <item
        android:id="@+id/ng"
        android:title="@string/ng" />
</menu>