<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:orientation="vertical">

    <TextView
        android:background="@color/c5"
        style="@style/WhiteText_large_bold"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center"
        android:text="@string/detail" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_52"
        android:layout_marginLeft="@dimen/dimen_8"
        android:layout_marginRight="@dimen/dimen_8"
        android:gravity="center_vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                style="@style/BlackText_medium_bold"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/progress_by_percent"
                android:textColor="@android:color/black" />

            <EditText
                android:maxLength="100"
                android:id="@+id/edt_process"
                android:inputType="number"
                android:clickable="false"
                android:cursorVisible="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:background="@drawable/shape_bgr_edt"
                style="@style/BlackText_medium"
                android:layout_width="@dimen/dimen_52"
                android:layout_height="@dimen/dimen_32"
                android:gravity="center_vertical"
                android:text="@string/num100"
                android:paddingLeft="@dimen/dimen_8" />
        </LinearLayout>

        <ImageView
            android:visibility="gone"
            android:id="@+id/btn_camera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_camera" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_1"
        android:background="@color/gray" />

    <LinearLayout
        android:layout_marginTop="@dimen/dimen_5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dimen_8"
        android:layout_marginRight="@dimen/dimen_8"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <TextView
            style="@style/BlackText_medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/content_with" />

        <TextView
            android:id="@+id/tv_content_cv_complete"
            style="@style/BlackText_medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_1"
        android:background="@color/gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dimen_8"
        android:layout_marginRight="@dimen/dimen_8"
        android:layout_marginTop="@dimen/dimen_5"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <TextView
            style="@style/BlackText_medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/construction_with" />

        <TextView
            android:id="@+id/tv_construction_name_complete"
            style="@style/BlackText_medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_1"
        android:background="@color/gray" />

    <LinearLayout
        android:layout_marginTop="@dimen/dimen_5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dimen_8"
        android:layout_marginRight="@dimen/dimen_8"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <TextView
            style="@style/BlackText_medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/categories" />

        <TextView
            android:id="@+id/tv_category_name_complete"
            style="@style/BlackText_medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_1"
        android:background="@color/gray" />

    <LinearLayout
        android:layout_marginTop="@dimen/dimen_5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dimen_8"
        android:layout_marginRight="@dimen/dimen_8"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <TextView
            style="@style/BlackText_medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/real_time" />

        <TextView
            android:id="@+id/tv_start_time_complete"
            style="@style/BlackText_medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="@dimen/dimen_5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dimen_8"
        android:layout_marginRight="@dimen/dimen_8"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <TextView
            style="@style/BlackText_medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/person_in_charge" />

        <TextView
            android:id="@+id/tv_performer"
            style="@style/BlackText_medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_1"
        android:background="@color/gray" />

    <LinearLayout
        android:layout_marginTop="@dimen/dimen_5"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="@dimen/dimen_8"
        android:layout_marginRight="@dimen/dimen_8"
        android:layout_weight="1.5"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <TextView
            android:text="@string/note"
            style="@style/BlackText_medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <EditText
            style="@style/BlackText_medium"
            android:id="@+id/edt_description"
            android:paddingLeft="@dimen/dimen_8"
            android:clickable="false"
            android:cursorVisible="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/shape_bgr_edt"
            android:gravity="top|left"
            android:hint="@string/input_note" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:scrollbars="horizontal"
        android:scrollbarSize="5dp"
        android:scrollbarThumbHorizontal="@drawable/shape_scrollbar"
        android:layout_marginTop="@dimen/dimen_4"
        android:layout_marginBottom="@dimen/dimen_4"
        android:layout_marginLeft="@dimen/dimen_8"
        android:layout_marginRight="@dimen/dimen_8"
        android:id="@+id/rv_list_image_complete"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_80">

    </androidx.recyclerview.widget.RecyclerView>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_1"
        android:background="@color/gray" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dimen_8"
        android:layout_marginRight="@dimen/dimen_8"
        android:gravity="center_vertical">

        <TextView
            android:layout_marginLeft="@dimen/dimen_5"
            android:background="?android:attr/selectableItemBackground"
            android:id="@+id/detail_cv_complete_btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_alignParentLeft="true"
            android:text="@string/back"
            android:textColor="@android:color/holo_blue_dark"
            android:textSize="18sp" />

        <TextView
            android:visibility="gone"
            android:id="@+id/btn_confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/confirm"
            android:textColor="@android:color/holo_blue_dark"
            android:textSize="18sp" />
    </RelativeLayout>

</LinearLayout>